--- a/CurrencySuiteWeb/App/Home/Home.css
+++ b/CurrencySuiteWeb/App/Home/Home.css
@@ -247,7 +247,7 @@ a{
             position: fixed;
             width: 90%;
             height: 95%;
-            z-index: 10;
+            z-index: 20;
 
             
         }
